# cuvis.ai.examples

./: .env.example  .gitignore  MIGRATION.md  README.md  REGISTRY.md  hf_config.yaml  pyproject.toml  requirements.txt  simple_graph_gmm.ipynb  simple_graph_sam.ipynb
EfficientAD/: EfficientADCuvisDataSet.py  EfficientAD_lightning.py  EfficientAD_torch_model.py  ImageNet_6ch_generator.py  README.md  data.py  dataset_notes.md  example_report_config.yaml  example_train_config.yaml  inference.ipynb  model.py  reporting.py  train_cuvis.py  training.py
PerPixelAE/: PerPixelAECuvisDataSet.py  PerPixelAEModels.py  README.md  annotations.json  example_report_config.yaml  example_train_config.yaml  reporting.py  train_cuvis.py
Reporting/: Report.py
StrawberryClassification/: README.md  StrawberryDataset.py  StrawberryLightning.py  UNet.py  dataset_notes.md  example_report_config.yaml  example_train_config.yaml  inference.ipynb  reporting.py  requirements.txt  train.py
cuvisai_examples/: __init__.py  get_data.py
cuvisai_examples/cli/: infer.py  report.py  train.py
cuvisai_examples/configs/: hf.yaml  infer.yaml  report.yaml  train.yaml
cuvisai_examples/configs/dataset/: efficientad.yaml  (+7 more)
cuvisai_examples/datasets/: dummy.py  efficientad_dataset.py  perpixel_ae_dataset.py  strawberry_dataset.py
cuvisai_examples/efficientad/: README.md  algorithm.md  data.py  example_report_config.yaml  example_train_config.yaml  imagenet_6ch_generator.py  inference.ipynb  model.py  reporting.py  test_data_pipeline.py  todo.md  train.py
cuvisai_examples/evaluation/: __init__.py  efficientad_evaluator.py  evaluator.py  perpixel_ae_evaluator.py  strawberry_evaluator.py
cuvisai_examples/models/: __init__.py  efficientad_lightning.py  efficientad_torch.py  identity.py  perpixel_ae.py  strawberry_lightning.py  strawberry_unet.py
cuvisai_examples/registry/: __init__.py  build.py  registry.py
cuvisai_examples/reporting/: __init__.py  default_reporter.py  efficientad_reporter.py  perpixel_ae_reporter.py  strawberry_reporter.py
cuvisai_examples/runners/: lightning_runner.py
cuvisai_examples/utils/: get_data.py
tools/: download_hf.py  import_smoke.py
(+13 files in other folders)
