[project]
name = "cuvisai-examples"
version = "0.1.0"
description = "cuvis.ai examples as an installable library with Hydra/OmegaConf and registries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cubert Hyperspectral" }]
dependencies = [
  "torch>=2.1",
  "pytorch-lightning>=2.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "tqdm",
]

[project.scripts]
cuvisai-train = "cuvisai_examples.cli.train:main"
cuvisai-infer = "cuvisai_examples.cli.infer:main"
cuvisai-report = "cuvisai_examples.cli.report:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["cuvisai_examples"]
