[project]
name = "cuvisai-examples"
version = "0.1.0"
description = "cuvis.ai examples as an installable library with Hydra/OmegaConf and registries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cubert Hyperspectral" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "lightning==2.2",
  "torchmetrics>=1.3",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "numpy",
  "opencv-python>=4.8",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "tensorboard>=2.14",
  "huggingface-hub>=0.35.0",
  "python-dotenv>=1.1.1",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
  "fire>=0.7.1",
  "loguru>=0.7.3",
  "ipdb>=0.13.13",
  "albumentations>=2.0.8",
]

[project.scripts]
get-data = "cuvisai_examples.utils.get_data:main"
efficientad-train = "cuvisai_examples.efficientad.train:main"
efficientad-report = "cuvisai_examples.efficientad.reporting:main"

# cuvisai-train = "cuvisai_examples.cli.train:main"
# cuvisai-infer = "cuvisai_examples.cli.infer:main"
# cuvisai-report = "cuvisai_examples.cli.report:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["cuvisai_examples"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
